--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/bird3" />
+       />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -42,18 +42,6 @@
         app:layout_constraintVertical_bias="0.519" />
 
     <ImageView
-        android:id="@+id/btnPrev2"
-        android:layout_width="105dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="147dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/left_arrow" />
-
-    <ImageView
         android:id="@+id/btnNext3"
         android:layout_width="115dp"
         android:layout_height="85dp"
@@ -64,4 +52,17 @@
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@drawable/right_arrow_icon" />
+
+    <ImageView
+        android:id="@+id/btnPrev2"
+        android:layout_width="112dp"
+        android:layout_height="82dp"
+        android:layout_marginEnd="181dp"
+        android:layout_marginBottom="148dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnNext3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/left_arrow" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
